fix: fit entities with classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=dba
 spring.datasource.password=123456
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
 jwt.secret.key=${JWT-SECRET-KEY}
+
+spring.jvm.arguments=--add-opens java.base/java.lang=ALL-UNNAMED
