fix: fit entities with classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.flyway.user=${DATABASE_USER}
 spring.flyway.password=${DATABASE_PASS}
 
 jwt.secret.key=${JWT-SECRET-KEY}
+
+spring.jvm.arguments=--add-opens java.base/java.lang=ALL-UNNAMED
