--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=ijb_api
-spring.datasource.url=jdbc:mysql://localhost:3310/ijb
-spring.datasource.username=dba
-spring.datasource.password=123456
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASS}
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 jwt.secret.key=${JWT-SECRET-KEY}
-
-spring.jvm.arguments=--add-opens java.base/java.lang=ALL-UNNAMED
