--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.password=${DATABASE_PASS}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.flywaydb.core=DEBUG
+spring.flyway.baselineOnMigrate=true
+spring.flyway.locations=classpath:db/migration
+
 
 jwt.secret.key=${JWT-SECRET-KEY}
