--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASS}
 
 spring.jpa.show-sql=true
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
 spring.jpa.properties.hibernate.format_sql=true
 
 jwt.secret.key=${JWT-SECRET-KEY}
