add supporter creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,11 @@ spring.datasource.password=${DATABASE_PASS}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.flywaydb.core=DEBUG
-spring.flyway.baselineOnMigrate=true
-spring.flyway.locations=classpath:db/migration
 
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate=true
+spring.flyway.enabled=true
+spring.flyway.user=${DATABASE_USER}
+spring.flyway.password=${DATABASE_PASS}
 
 jwt.secret.key=${JWT-SECRET-KEY}
