--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
 			<artifactId>flyway-maven-plugin</artifactId>
 			<version>9.22.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
