Update Docker configuration and add deployment workflow
- Modify Dockerfile to use openjdk:17-jdk-slim, set working directory, and copy necessary files.
- Update docker-compose.yml to define app service with environment variables and dependencies.
- Refactor pom.xml to use environment variables for database connection.
- Add GitHub Actions workflow for automated build and deployment.
- Include wait-for-it.sh script for service readiness checks.

--- a/pom.xml
+++ b/pom.xml
@@ -107,9 +107,9 @@
 				<artifactId>flyway-maven-plugin</artifactId>
 				<version>9.22.3</version>
 				<configuration>
-					<url>jdbc:mysql://localhost:3310/ijb</url>
-					<user>dba</user>
-					<password>123456</password>
+					<url>${DATABASE_URL}</url>
+					<user>${DATABASE_USER}</user>
+					<password>${DATABASE_PASS}</password>
 					<locations>classpath:db/migration</locations>
 				</configuration>
 			</plugin>
