--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
+version: '3.8'
+
 services:
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      DATABASE_URL: jdbc:mysql://db:3306/ijb
+      DATABASE_USER: dba
+      DATABASE_PASS: 123456
+      JWT-SECRET-KEY: sua_chave_secreta
+      HOST: localhost
+    depends_on:
+      - db
+
   db:
     image: mysql:8.0.39
     ports:
       - "3310:3306"
     environment:
-      MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: ijb
       MYSQL_USER: dba
