--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.flyway.password=${DATABASE_PASS}
 jwt.secret.key=${JWT-SECRET-KEY}
 
 host=${HOST}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noreply.institutojoaodebarro@gmail.com
+spring.mail.password=xggozyqniefcjvol
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.smtp.starttls.enable=true
