--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ijb_api
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASS}
+spring.datasource.url=jdbc:mysql://localhost:3310/ijb
+spring.datasource.username=root
+spring.datasource.password=123456
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,8 +10,8 @@ logging.level.org.flywaydb.core=DEBUG
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate=true
 spring.flyway.enabled=true
-spring.flyway.user=${DATABASE_USER}
-spring.flyway.password=${DATABASE_PASS}
+spring.flyway.user=root
+spring.flyway.password=123456
 
 jwt.secret.key=${JWT-SECRET-KEY}
 
@@ -23,3 +23,4 @@ spring.mail.username=noreply.institutojoaodebarro@gmail.com
 spring.mail.password=xggozyqniefcjvol
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.smtp.starttls.enable=true
+
