--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,7 @@ spring.mail.port=587
 spring.mail.username=noreply.institutojoaodebarro@gmail.com
 spring.mail.password=xggozyqniefcjvol
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
 
